GUI: Fix drawing bug for ItemGrid background.
We were drawing the white background in the wrong spot unless A1 was
visible.  This problem has previously hidden by making the whole
canvas have a white background, but with css styling things were
showing.

--- a/src/gnumeric.css
+++ b/src/gnumeric.css
@@ -1,7 +1,6 @@
 /* ------------------------------------------------------------------------- */
-/* GnmPane is the canvas. */
 /* The ItemGrid is the canvas area that holds all the cells.  */
-GnmPane, ItemGrid {
+ItemGrid {
   background: white;
 }
 
